Pretty sure this is done (as it'll get (; ).

--- a/school/elec_302/paper/paper.tex
+++ b/school/elec_302/paper/paper.tex
@@ -48,9 +48,11 @@ Figure~\ref{acwave}.  By relating this shift of phase to the angle divisions
 along the axis, a phase angle is determined.
 
 When referring to waveforms out of phase, it is common to determine one as
-``leading'' or ``lagging''.  With respect to a reference, a leading waveform is
-one that is further along in its cycle.  By convention, voltage is used as the
-reference in \ac{AC} circuits.
+``leading'' or ``lagging''.  Like voltage, a leading or lagging waveform can
+only be determined with reference to another value.  A waveform that starts its
+cycle ahead of the reference is leading; likewise, one that starts later is
+lagging.  By convention, voltage is used as the reference waveform in \ac{AC}
+circuits.
 
 \section*{How is \ac{AC} Generated?}
 
@@ -82,9 +84,9 @@ return after only half a cycle.  Though there is no net flow through the
 circuit, energy is still consumed because of the movement.
 
 The power spent working against desired flow is termed reactive power and
-plotted on the imaginary axis in Figure~\ref{complexpwr}.  The sum of the real
-power transferred and reactive power wasted, complex power, is what actually
-reaches the load.
+plotted on the imaginary axis in Figure~\ref{complexpwr}.  The vector sum of
+real power transferred and reactive power wasted, complex power, is what
+actually reaches the load.
 
 %\twocolumn
 \begin{figure}[p]
