--- a/school/elec_313/lab1/tex/report.tex
+++ b/school/elec_313/lab1/tex/report.tex
@@ -61,14 +61,7 @@
 % Conclusions section for an example of \ref{}.
 \label{sec:objective}
 
-% Single objective:
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam
-nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis
-natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non
-turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum
-accumsan nisl.
+The objective is to verify the equivalence of four circuits used to model an amplifier, shown in Figure~\ref{fig:amp_models}.
 
 \section{Schematics}
 \label{sec:schematics}
@@ -131,12 +124,13 @@ accumsan nisl.
 \begin{table}[h]
   \label{tab:table_02}
   \centering
-  \begin{tabular}{*{5}{c}}
-    & \multicolumn{2}{c}{\textbf{Voltage}} & \multicolumn{2}{c}{\textbf{Current}} \\
-    & $V_i (\si{\milli\volt_{rms}})$ & $V_o (\si{\volt_{rms}})$ & $I_i (\si{\milli\ampere_{rms}})$ & $I_o (\si{\milli\ampere_{rms}})$ \\
+  \begin{tabular}{*{7}{c}}
+    & \multicolumn{2}{c}{\textbf{Voltage}} & \multicolumn{2}{c}{\textbf{Current}} & \multicolumn{2}{c}{\textbf{Gain}} \\
+    & $V_i$ & $V_o$ & $I_i$ & $I_o$ & $A_v$ & $A_i$ \\
+    & $(\si{\milli\volt_{rms}})$ & $(\si{\volt_{rms}})$ & $(\si{\milli\ampere_{rms}})$ & $(\si{\milli\ampere_{rms}})$ & & \\
     \hline
-    \textbf{No Load} & 200 & 1.98 & 0.2 & nil \\
-    \textbf{Load} & 200 & 1.98 & 0.2 & 9.52 \\
+    \textbf{No Load} & 200 & 1.98 & 0.2 & nil & 9.9 & nil \\
+    \textbf{Load} & 200 & 1.98 & 0.2 & 9.52 & 9.9 & 47.6 \\
   \end{tabular}
   \caption{Comparison of electrical characteristics of the amplifier under load.}
 \end{table}
@@ -169,10 +163,20 @@ lacinia pulvinar nibh. Nam a sapien.
 % \[ and \] designate "math mode" (just like $ did).  Note, this is
 % also how we get special characters and pretty-print equations.
 \[\%_{error} = \frac{|measured - nominal|}{nominal} \times 100\%\]
-\[R_i = \frac{V_i}{I_i}\]
 \[R_o = \frac{V_{noload} - V_{load}}{I_{load}}\]
+\[R_i = \frac{V_i}{I_i}\]
 \[A_v = \frac{V_o}{V_i}\]
-\[G_m = \frac{A_v}{R_o}\]
 \[A_i = A_v \left(\frac{R_i}{R_o}\right)\]
+\[G_m = \frac{A_v}{R_o}\]
 \[R_m = A_v R_i\]
+
+\section{Appendix}
+\label{sec:appendix}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[]{img/amp_models}
+  \caption{Four equivalent models of an amplifier}
+  \label{fig:amp_models}
+\end{figure}
 \end{document}
