--- a/school/elec_313/lab1/tex/report.tex
+++ b/school/elec_313/lab1/tex/report.tex
@@ -41,7 +41,7 @@
    \begin{tabular}{lr}
     Date Performed: & September 11, 2013 \\
     Partners: & Charles Pittman \\
-              & Stephen W-something? \\
+              & Stephen Wilson \\
   \end{tabular}
 \end{center}
 
@@ -160,15 +160,40 @@ lacinia pulvinar nibh. Nam a sapien.
 
 \section*{Equations}
 
-% \[ and \] designate "math mode" (just like $ did).  Note, this is
-% also how we get special characters and pretty-print equations.
-\[\%_{error} = \frac{|measured - nominal|}{nominal} \times 100\%\]
-\[R_o = \frac{V_{noload} - V_{load}}{I_{load}}\]
-\[R_i = \frac{V_i}{I_i}\]
-\[A_v = \frac{V_o}{V_i}\]
-\[A_i = A_v \left(\frac{R_i}{R_o}\right)\]
-\[G_m = \frac{A_v}{R_o}\]
-\[R_m = A_v R_i\]
+\begin{equation}
+  \label{eqn:percent_error}
+  \%_{error} = \frac{|measured - nominal|}{nominal} \times 100\%
+\end{equation}
+
+\begin{equation}
+  \label{eqn:R_o}
+  R_o = \frac{V_{noload} - V_{load}}{I_{load}}
+\end{equation}
+
+\begin{equation}
+  \label{eqn:R_i}
+  R_i = \frac{V_i}{I_i}
+\end{equation}
+
+\begin{equation}
+  \label{eqn:A_v}
+  A_v = \frac{V_o}{V_i}
+\end{equation}
+
+\begin{equation}
+  \label{eqn:A_i}
+  A_i = A_v \left(\frac{R_i}{R_o}\right)
+\end{equation}
+
+\begin{equation}
+  \label{eqn:G_m}
+  G_m = \frac{A_v}{R_o}
+\end{equation}
+
+\begin{equation}
+  \label{eqn:R_m}
+  R_m = A_v R_i
+\end{equation}
 
 \section{Appendix}
 \label{sec:appendix}
