Fixed truth table. Added acronym.

--- a/school/elec_311/project_1/tex/acronyms.tex
+++ b/school/elec_311/project_1/tex/acronyms.tex
@@ -1,4 +1,5 @@
 % Common EE terms
+\newacronym{fpga}{FPGA}{field-programmable gate array}
 \newacronym{kcl}{KCT}{Kirchoff's Current Law}
 \newacronym{kvl}{KVT}{Kirchoff's Voltage Law}
 
