eps images scale better than png.  Added temporary file to .gitignore

--- a/school/elec_313/lab1/tex/report.tex
+++ b/school/elec_313/lab1/tex/report.tex
@@ -77,7 +77,7 @@ The objective is to verify the equivalence of four circuits used to model an amp
   % File is at "./img/circuit.png".  Plain LaTeX only supports .eps
   % files.  Other LaTeX compilers support different formats.  I use
   % pdflatex.
-    \includegraphics[]{img/circuit}
+    \includegraphics[]{img/ckt_tested}
   \caption{Circuit being tested.  $C_1 = C_2 = \SI{1}{\micro\farad}$}
 \end{figure}
 
