Forgot to add images

--- a/school/elec_311/project_1/tex/report.tex
+++ b/school/elec_311/project_1/tex/report.tex
@@ -45,7 +45,8 @@
  \item[First Objective] \hfill \\
    Analyze a combinational logic circuit and determine its behavior.
  \item[Second Objective] \hfill \\
-   Objective 2 text
+   Use the Xilinx ISE Design Suite to simulate the logic circuit and
+   program a \gls{fpga} board to verify the behavior.
  \end{description}
 
 \section{Discussion}
