--- a/school/elec_313/lab1/tex/report.tex
+++ b/school/elec_313/lab1/tex/report.tex
@@ -84,8 +84,7 @@ model an amplifier, shown in Figure~\ref{fig:amp_models}.
 \begin{figure}[hbtp]
   \centering
   \includegraphics[]{img/test_config}
-  \caption{Test Configuration}
-  \label{fig:test_config}
+  \caption{\label{fig:test_config} Test Configuration}
 \end{figure}
 
 \section{Procedure}
@@ -93,18 +92,22 @@ model an amplifier, shown in Figure~\ref{fig:amp_models}.
 
 First, resistors $R_1$, $R_2$, and $R_3$ were measured with a
 multimeter and recorded in Table~\ref{tab:table_01}.  Then the circuit
-in Figure~\ref{fig:circuit} was constructed on a breadboard.  A function
-generator was programmed to output a sine wave at \SI{1}{\kilo\hertz}.
-The test configuration was constructed as shown in Figure 2 using
-Fluke multimeters as the ammeters and an oscilloscope as both
-voltmeters.  The function generator was added to the circuit as the
-voltage input ($V_i$) and, with the oscilloscope measuring the voltage
-generator, the amplitude was adjusted to $200\si{\volt_{rms}}$.  The
-input voltage, input current, and output voltage were taken and
-recorded in Table 2 with the open circuit across the load terminals.
-Finally, the decade box was added to the output terminals (V0 in
-Figure 1) of the circuit and, set to $200 \si{\ohm}$, and the output
-voltage was measured and recorded in (Table 2).
+in Figure~\ref{fig:circuit} was constructed on a breadboard.  Next,
+the configuration depicted in Figure~\ref{fig:test_config} was assembled.
+
+Two Fluke multimeters served as the ammeters, and two input channels
+of an oscilloscope served as voltmeters.  The function generator was
+set to produce a sine wave with amplitude of
+\SI{200}{\milli\volt_{rms}} @ \SI{1}{\kilo\hertz}, serving as the
+voltage source, and a decade box set to \SI{200}{\ohm} serving as the
+load.
+
+With the load disconnected, the input voltage ($V_i$), input current
+($I_i$), output voltage ($V_o$), and output current ($I_i$) were
+measured and recorded in Table~\ref{tab:table_02}.  This step was then
+repeated with the load connected.  Using these values with the
+equations derived from the four amplifier models, measured values were
+determined where direct measurement was difficult.
 
 \section{Results}
 \label{sec:results}
@@ -143,11 +146,11 @@ voltage was measured and recorded in (Table 2).
     & \multicolumn{3}{c}{\textbf{Load}} & \multicolumn{2}{c}{\textbf{No Load}} \\
     & \textbf{Nominal} & \textbf{Measured} & \textbf{\% Error} & \textbf{Nominal} & \textbf{Measured} \\
     \hline
-    $R_o$ (\si{\ohm}) & 200 & 207.98 & 3.99\% & $\infty$ & $\infty$ \\
+    $R_o$ (\si{\ohm}) & 0 & 0 & nil & 0 & 0 \\
     $R_i$ (\si{\kilo\ohm}) & 1 & 1 & 0.00\% & 1 & 1 \\
     $A_v$ & 10 & 9.9 & 1.00\% & 10 & 9.9 \\
     $A_i$ & 50 & 47.6 & 4.80\% & nil & nil \\
-    $G_m$ (\si{\siemens}) & 0.05 & 0.0495 & 1.00\% & 0 & 0 \\
+    $G_m$ (\si{\siemens}) & $\infty$ & $\infty$ & nil & $\infty$ & $\infty$ \\
     $R_m$ (\si{\kilo\ohm}) & 10 & 9.9 & 1.00\% & 10 & 9.90 \\
   \end{tabular}
   \caption{Comparison of values determined from amplifier models in Figure~\ref{fig:amp_models}}
@@ -157,21 +160,18 @@ voltage was measured and recorded in (Table 2).
 \section{Conclusion}
 \label{sec:conclusion}
 
-As seen in Table 3, the measured results of the circuit were very
-close to the calculated values using nominal values of the resistors.
-This shows that the four amplifier models shown in
-Figure~\ref{fig:amp_models} are closely representative of the
-operational amplifier circuit seen in Figure 1.  The highest \%
-difference when comparing the measured with the nominal theoretical
-value was only 4.8\% (current gain [Ai] Table 3)!
+As shown in Table~\ref{tab:table_03}, the amplifier models do closely
+represent the amplifier used in the experiment.  The greatest
+difference occurred in the current gain ($A_i$), largely due to $R_o$
+being nearly zero.  This also causes $G_m$ to be very large.
+
 \section{Appendix}
 \label{sec:appendix}
 
-\begin{figure}[h]
+\begin{figure}[hbtp]
   \centering
   \includegraphics[width=\textwidth]{img/amp_models}
-  \caption{Four equivalent models of an amplifier}
-  \label{fig:amp_models}
+  \caption{\label{fig:amp_models} Four equivalent models of an amplifier}
 \end{figure}
 
 \subsection*{Equations}
